[metadata]
name = wikipedia_counter
version = 1.0.0
author = Matt Owen
author_email = matt@worldshadowgovernment.com
url = https://github.com/whatever/wikipedia_counter
description = serve articlve view for a given wikipedia page and month
long_description = file: README.md
long_description_content_type = text/markdown
keywords = wikipedia counter
license = LICENSE
classifiers =
  Programming Language :: Python :: 3

[options]
package_dir =
  = src
packages = find:
install_requires =
  Flask >= 3.0.2 
  gunicorn >= 21.2.0 

[options.packages.find]
where = src
exclude =
  examples*
  tools*
  docs*
  wikipedia_counter.tests*

[options.entry_points]
console_scripts = 
  wikipedia-counter = wikipedia_counter.cli:main

[options.package_data]
* = README.md

[options.extras_require]
dev =
  pyright >= 1.1.0
  pytest >= 7.0.0
  flake8 >= 7.0.0

[flake8]
max-line-length = 120

